tests/ui/parser/missing-semicolon.stderr
error: expected one of `.`, `;`, `?`, `else`, or an operator, found keyword `let`
  --> $DIR/missing-semicolon.rs:3:12
   |
LL | / macro_rules! m {
LL | |     ($($e1:expr),*; $($e2:expr),*) => {
LL | |         $( let x = $e1 )*;
   | |            ^^^ expected one of `.`, `;`, `?`, `else`, or an operator
LL | |         $( println!("{}", $e2) )*;
LL | |     }
LL | | }
   | |_- in this expansion of `m!`
LL |
LL |   fn main() { m!(0, 0; 0, 0); }
   |               -------------- in this macro invocation

error: aborting due to previous error

